# pyinit

./: CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.ja.md  SECURITY.md
.github/workflows/: release.yml
src/: error.rs  interact.rs  lib.rs  main.rs  util.rs
src/templates/: license.rs  mod.rs
templates/: README.md  __init__.py  requirements.txt  setup.py
templates/licenses/: Apache-2.0  BSD 2-Clause  BSD 3-Clause  CC0-1.0  EPL-2.0  GPL-3.0
