[package]
name    = "pyinit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap      = { version = "4.0", features = ["derive"] }
reqwest   = { version = "0.11", features = ["blocking"] }
dialoguer = { version = "0.10" }
chrono    = { version = "0.4" }
askama    = { version = "0.12" }
thiserror = { version = "1" }
